added quick-add feature

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -218,7 +218,10 @@
       "payment": "Payment methods"
     },
     "featured_products": {
-      "feature-product__button": "Shop now"
+      "button": "Shop now",
+      "quick-add-button": "Quick Add",
+      "quick-add-button_adding": "Adding...",
+      "quick-add-button_added": "Added"
     },
     "featured_blog": {
       "view_all": "View all",
