--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -221,7 +221,8 @@
       "button": "Shop now",
       "quick-add-button": "Quick Add",
       "quick-add-button_adding": "Adding...",
-      "quick-add-button_added": "Added"
+      "quick-add-button_added": "Added",
+      "choose_options": "Choose Options"
     },
     "featured_blog": {
       "view_all": "View all",
